force-app/main/default/objects/SFCC_Transaction__c/SFCC_Transaction__c.object-meta.xml
<CustomObject>
    <label>SFCC Transaction</label>
    <nameField>
        <label>SFCC Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFCC Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>