force-app/main/default/objects/SFCC_Transaction__c/fields/CartID__c.field-meta.xml
<CustomField>
    <fullName>CartID__c</fullName>
    <label>CartID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>