force-app/main/default/objects/SFCC_Transaction__c/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <label>CreationDate</label>
    <type>Date</type>
</CustomField>