force-app/main/default/objects/SFCC_Transaction__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>OrderStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>