force-app/main/default/objects/SFCC_Transaction__c/fields/OrderTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderTotal__c</fullName>
    <label>OrderTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>