force-app/main/default/objects/SFCC_Transaction__c/fields/ShippingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingDate__c</fullName>
    <label>ShippingDate</label>
    <type>Date</type>
</CustomField>