force-app/main/default/objects/SFCC_Transaction__c/fields/SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>SubscriberKey__c</fullName>
    <label>SubscriberKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>